Updated App Name

--- a/manifest.yml
+++ b/manifest.yml
@@ -1,6 +1,6 @@
 ---
 applications:
-  - name: questionmark-consistorian-hyperconstitutionalism
+  - name: QuestionMark
     memory: 128M
     timeout: 180
     buildpack: nodejs_buildpack
